tests/predicates_parsing/predicates_parsing.exp
Error --------------------------------------------------------------------------------------------------- fail-0.js:3:40

Predicate function declarations need to declare a predicate expression. [unsupported-syntax]

   3| declare function f2(x: mixed): boolean %checks;
                                             ^^^^^^^


Error --------------------------------------------------------------------------------------------------- fail-1.js:3:24

Cannot declare predicate when a function body is present. [unsupported-syntax]

   3| function f6(x: mixed): %checks (x !== null) {  }
                             ^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- fail-1.js:3:45

Predicate functions need to return non-void. [unsupported-syntax]

   3| function f6(x: mixed): %checks (x !== null) {  }
                                                  ^^^^


Error --------------------------------------------------------------------------------------------------- fail-2.js:1:22

Cannot declare predicate when a function body is present. [unsupported-syntax]

   1| var a2 = (x: mixed): %checks (x !== null) => {        // Error: body form
                           ^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- fail-3.js:3:24

Cannot declare predicate when a function body is present. [unsupported-syntax]

   3| function f5(x: mixed): %checks (x !== null) { return x !== null }
                             ^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- fail-3.js:5:22

Cannot declare predicate when a function body is present. [unsupported-syntax]

   5| var a2 = (x: mixed): %checks (x !== null) => x !== null;
                           ^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- unsupported-0.js:3:31

Unexpected token `%`, expected the token `;`

   3| var a3: (x: mixed) => boolean %checks (x !== null);
                                    ^


Error -------------------------------------------------------------------------------------------- unsupported-1.js:3:31

Unexpected token `%`, expected the token `;`

   3| var a4: (x: mixed) => boolean %checks = (x: mixed) => x !== null;
                                    ^


Error -------------------------------------------------------------------------------------------- unsupported-2.js:3:31

Unexpected token `%`, expected the token `;`

   3| var a5: (x: mixed) => boolean %checks(x !== null) =
                                    ^



Found 9 errors
